--- a/HOMEPAGE.html
+++ b/HOMEPAGE.html
@@ -1,9 +1,189 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-	<title> Ji Yaohua</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>nickj1h</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>">
+  <style>
+    :root {
+      --bg: #ffffff;
+      --fg: #1a1a1a;
+      --card-bg: #f8f9fa;
+      --border: #e0e0e0;
+      --accent: #4361ee;
+      --shadow: rgba(0,0,0,0.08);
+    }
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #121212;
+        --fg: #e0e0e0;
+        --card-bg: #1e1e1e;
+        --border: #333;
+        --accent: #4cc9f0;
+        --shadow: rgba(0,0,0,0.3);
+      }
+    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+      line-height: 1.6;
+      padding: 2rem;
+      transition: background 0.3s;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 3rem;
+      animation: fadeIn 1s ease;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      background: linear-gradient(90deg, var(--accent), #7209b7);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
+    .tagline {
+      font-size: 1.2rem;
+      opacity: 0.8;
+      margin-bottom: 1.5rem;
+    }
+    .avatar {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background: var(--accent);
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      border: 3px solid var(--accent);
+    }
+    .section {
+      margin: 3rem 0;
+      animation: slideUp 0.8s ease;
+    }
+    .section h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+      position: relative;
+      display: inline-block;
+    }
+    .section h2::after {
+      content: '';
+      position: absolute;
+      bottom: -8px;
+      left: 0;
+      width: 50px;
+      height: 4px;
+      background: var(--accent);
+      border-radius: 2px;
+    }
+    .projects {
+      display: grid;
+      gap: 1.5rem;
+    }
+    .project-card {
+      background: var(--card-bg);
+      padding: 1.5rem;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      box-shadow: 0 4px 12px var(--shadow);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .project-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 6px 16px var(--shadow);
+    }
+    .project-card h3 {
+      margin-bottom: 0.5rem;
+      color: var(--accent);
+    }
+    .links {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+    }
+    .link-btn {
+      background: var(--card-bg);
+      color: var(--fg);
+      padding: 0.6rem 1.2rem;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 500;
+      border: 1px solid var(--border);
+      transition: all 0.2s;
+    }
+    .link-btn:hover {
+      background: var(--accent);
+      color: white;
+      border-color: var(--accent);
+    }
+    footer {
+      text-align: center;
+      margin-top: 3rem;
+      opacity: 0.7;
+      font-size: 0.9rem;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    @media (max-width: 600px) {
+      body { padding: 1rem; }
+      h1 { font-size: 2rem; }
+    }
+  </style>
 </head>
 <body>
-	<h1> WELCOME </h1>
+  <div class="container">
+    <header>
+      <div class="avatar">N</div>
+      <h1>Hi, I'm nickj1h</h1>
+      <p class="tagline">开发者 · 探索者 · 终身学习者</p>
+      <div class="links">
+        <a href="https://github.com/nickj1h" class="link-btn" target="_blank">GitHub</a>
+        <a href="mailto:nickj1h@example.com" class="link-btn" target="_blank">Email</a>
+        <!-- 可添加更多链接 -->
+      </div>
+    </header>
+
+    <section class="section">
+      <h2>✨ 我的项目</h2>
+      <div class="projects">
+        <div class="project-card">
+          <h3>实用工具集</h3>
+          <p>一个集合常用小工具的网页应用，支持一键操作。</p>
+        </div>
+        <div class="project-card">
+          <h3>学习笔记</h3>
+          <p>记录编程、算法和系统设计的学习心得。</p>
+        </div>
+        <!-- 可继续添加项目 -->
+      </div>
+    </section>
+
+    <footer>
+      <p>© 2025 nickj1h. Made with ❤️ and GitHub Pages.</p>
+    </footer>
+  </div>
+
+  <script>
+    // 自动检测系统主题（已通过 CSS 实现）
+    // 你可以在这里加更多交互，比如点击头像换颜色等
+  </script>
 </body>
 </html>
