changed the heading's color.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>nickj1h</title>
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚡</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎮</text></svg>">
   <style>
     :root {
       --bg: #ffffff;
       --fg: #1a1a1a;
       --card-bg: #f8f9fa;
       --border: #e0e0e0;
-      --accent: #4361ee;
+      --accent: #374a9c;
       --shadow: rgba(0,0,0,0.08);
     }
     @media (prefers-color-scheme: dark) {
@@ -20,7 +20,7 @@
         --fg: #e0e0e0;
         --card-bg: #1e1e1e;
         --border: #333;
-        --accent: #4cc9f0;
+        --accent: #dfebeb;
         --shadow: rgba(0,0,0,0.3);
       }
     }
@@ -45,7 +45,7 @@
     h1 {
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
-      background: linear-gradient(90deg, var(--accent), #7209b7);
+      background: linear-gradient(90deg, var(--accent), #7109b7e5);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -81,7 +81,7 @@
       left: 0;
       width: 50px;
       height: 4px;
-      background: var(--accent);
+      background: var(--white);
       border-radius: 2px;
     }
     .projects {
@@ -162,7 +162,7 @@
       </div>
     </header>
     <section class="section">
-      <h2>✨ 我的项目</h2>
+      <h2> 我的项目</h2>
       <div class="projects">
         <a href="https://www.baidu.com" class="project-card" target="_blank" rel="noopener noreferrer">
           <h3>学习笔记</h3>
@@ -170,9 +170,8 @@
         </a>
       </div>
     </section>
-
     <footer>
-      <p>© 2025 nickj1h.</p>
+      <p>© 2025 JI Yaohua.</p>
     </footer>
   </div>
 
