--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       --fg: #1a1a1a;
       --card-bg: #f8f9fa;
       --border: #e0e0e0;
-      --accent: #374a9c;
+      --accent: #0b37ffec;
       --shadow: rgba(0,0,0,0.08);
+      --black:#000000;
+      --white:#ffffff;
     }
     @media (prefers-color-scheme: dark) {
       :root {
@@ -20,7 +22,7 @@
         --fg: #e0e0e0;
         --card-bg: #1e1e1e;
         --border: #333;
-        --accent: #dfebeb;
+        --accent: #0b37ffec;
         --shadow: rgba(0,0,0,0.3);
       }
     }
@@ -45,7 +47,7 @@
     h1 {
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
-      background: linear-gradient(90deg, var(--accent), #7109b7e5);
+      background: linear-gradient(180deg, var(--white), #0b37ffec);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -81,7 +83,7 @@
       left: 0;
       width: 50px;
       height: 4px;
-      background: var(--white);
+      background: var(--bg);
       border-radius: 2px;
     }
     .projects {
@@ -106,7 +108,7 @@
     }
     .project-card h3 {
       margin-bottom: 0.5rem;
-      color: var(--accent);
+      color: var(--white);
     }
     .links {
       display: flex;
@@ -164,7 +166,7 @@
     <section class="section">
       <h2> 我的项目</h2>
       <div class="projects">
-        <a href="https://www.baidu.com" class="project-card" target="_blank" rel="noopener noreferrer">
+        <a href="leetcode.html" class="project-card" target="_blank" rel="noopener noreferrer">
           <h3>学习笔记</h3>
           <p>记录学习心得。</p>
         </a>
