changed some color.

--- a/leetcode.html
+++ b/leetcode.html
@@ -25,7 +25,7 @@
         --fg: #e2e8f0;
         --card-bg: #2d3748;
         --border: #4a5568;
-        --accent: #4cc9f0;
+        --accent: #fdfeff;
         --code-bg: #1a202c;
         --code-fg: #e2e8f0;
         --comment: #a0aec0;
