change the color of accent variable and update the password in leetcode.html

--- a/leetcode.html
+++ b/leetcode.html
@@ -14,7 +14,7 @@
       --fg: #2d3748;
       --card-bg: #f8f9fa;
       --border: #e2e8f0;
-      --accent: #4361ee;
+      --accent: #3d5ff7ec;
       --code-bg: #2d3748;
       --code-fg: #e2e8f0;
       --comment: #a0aec0;
@@ -25,7 +25,7 @@
         --fg: #e2e8f0;
         --card-bg: #2d3748;
         --border: #4a5568;
-        --accent: #4cc9f0;
+        --accent: #3d5ff7ec;
         --code-bg: #1a202c;
         --code-fg: #e2e8f0;
         --comment: #a0aec0;
@@ -374,7 +374,7 @@
           }
 
           // 简单的哈希验证
-          const expectedPassword = 'your-secret-password'; // 请修改为你的密码
+          const expectedPassword = 'nickj1h'; // 请修改为你的密码
           const inputHash = btoa(unescape(encodeURIComponent(inputPassword)));
           const expectedHash = btoa(unescape(encodeURIComponent(expectedPassword)));
 
