--- a/leetcode.html
+++ b/leetcode.html
@@ -6,7 +6,7 @@
   <title>LeetCode 刷题笔记</title>
   
   <!-- 🔥 Prism.js 语法高亮主题 -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-one-dark.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
   
   <style>
     :root {
@@ -725,7 +725,7 @@ var twoSum = function(nums, target) {
     renderProblemList();
   </script>
 
-  <!-- 🔥 Prism.js 核心库 -->
+  <!-- Prism.js 核心库 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
 </body>
